# kayak

./: ARCHITECTURE.md  Cargo.toml  LICENSE.txt  README.md  flake.nix
.github/workflows/: release.yml
src/: distribution.rs  format.rs  lib.rs  main.rs  package_inspect.rs  picker.rs  ui.rs  warehouse.rs
src/ui/: interactive.rs  pretty.rs  text.rs
tests/: warehouse_integration.rs
