[package]
name = "kayak"
description = "You ought to know about your artifact's key-data"
homepage = "https://github.com/ucodery/kayak"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/ucodery/kayak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
colored = "2"
csv = "1.3"
mail-parser = "0.9.2"
pep440 = "0.2.0"
python-pkginfo = "0.5.5"
regex = "1.8.1"
rust-ini = "0.20"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
trove-classifiers = "<1"
ureq = { version = "2.6.2", features = ["json"] }
url = "2.3.1"
zip = { version = "0.6.4", default-features = false }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "ucodery/homebrew-draft"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
