[package]
name = "kayak"
description = "You ought to know about your artifact's key-data"
homepage = "https://github.com/ucodery/kayak"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/ucodery/kayak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
csv = "1.3"
mail-parser = "0.9.3"
mime = "0.3.17"
pep440 = "0.2.0"
ratatui = "0.28.1"
#python-pkginfo = "0.5.5"
regex = "1.10"
rust-ini = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
termimad = "0.30.0"
trove-classifiers = "<1"
ureq = { version = "2.10", features = ["json"] }
url = "2.5"
zip = "2.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "ucodery/homebrew-draft"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
